--- a/src/atoms/spacing.mdx
+++ b/src/atoms/spacing.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Styleguide/Spacing" />
+<Meta title="System/Spacing" />
 
 # Spacing Guidelines
 
