--- a/src/components/Button/README.mdx
+++ b/src/components/Button/README.mdx
@@ -1,7 +1,7 @@
 {/* ButtonDocs.mdx */}
 
 import { Meta, Primary, Controls, Story } from '@storybook/blocks';
-import * as ButtonStories from './index.stories';
+import * as ButtonStories from './Button.stories';
 
 <Meta of={ButtonStories} />
 
