--- a/src/components/Chips/README.mdx
+++ b/src/components/Chips/README.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls, Unstyled, Story } from '@storybook/blocks';
-import * as ChipStories from './index.stories';
+import * as ChipStories from './Chips.stories';
 import { Chip } from './';
 
 <Meta of={ChipStories} />
