Fix: fix README import

--- a/src/components/Chips/README.mdx
+++ b/src/components/Chips/README.mdx
@@ -1,6 +1,6 @@
 import { Meta, Primary, Controls, Unstyled, Story } from '@storybook/blocks';
 import * as ChipStories from './Chips.stories';
-import { Chip } from './';
+import { Chip } from './Chips.tsx';
 
 <Meta of={ChipStories} />
 
