--- a/src/components/InputField/README.mdx
+++ b/src/components/InputField/README.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls, Unstyled, Story } from '@storybook/blocks';
-import * as InputFieldStories from './index.stories';
+import * as InputFieldStories from './InputField.stories';
 
 <Meta of={InputFieldStories} />
 
