--- a/src/components/RadioButton/README.mdx
+++ b/src/components/RadioButton/README.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls, Unstyled, Story } from '@storybook/blocks';
-import * as RadioButtonStories from './index.stories';
+import * as RadioButtonStories from './RadioButton.stories';
 import { RadioGroup } from './RadioGroup';
 
 <Meta of={RadioButtonStories} />
