--- a/src/components/Switch/README.mdx
+++ b/src/components/Switch/README.mdx
@@ -1,6 +1,6 @@
 import { Meta, Primary, Controls, Unstyled, Story } from '@storybook/blocks';
-import * as SwitchStories from './index.stories';
-import { Switch } from './';
+import * as SwitchStories from './Switch.stories';
+import { Switch } from './Switch.tsx';
 
 <Meta of={SwitchStories} />
 
