--- a/src/components/Tooltips/README.mdx
+++ b/src/components/Tooltips/README.mdx
@@ -1,6 +1,6 @@
 import { Meta, Primary, Controls, Story } from '@storybook/blocks';
-import * as TooltipStories from './index.stories';
-import { Tooltip } from './';
+import * as TooltipStories from './Tooltips.stories';
+import { Tooltips } from './Tooltips.tsx';
 
 <Meta of={TooltipStories} />
 
