--- a/src/components/Typography/README.mdx
+++ b/src/components/Typography/README.mdx
@@ -1,6 +1,6 @@
 import { Meta, Primary, Controls, Unstyled, Story } from '@storybook/blocks';
-import * as TypographyStories from './index.stories';
-import Typography from './';
+import * as TypographyStories from './Typography.stories';
+import { Typography } from './Typography.tsx';
 
 <Meta of={TypographyStories} />
 
