--- a/src/components/Avatar/README.mdx
+++ b/src/components/Avatar/README.mdx
@@ -1,5 +1,5 @@
 import { Meta, Story, Unstyled, Controls } from '@storybook/blocks';
-import * as AvatarStories from './index.stories';
+import * as AvatarStories from './Avatar.stories';
 
 <Meta of={AvatarStories} />
 
