--- a/src/components/Dropdown/README.mdx
+++ b/src/components/Dropdown/README.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls, Story, Unstyled } from '@storybook/blocks';
-import * as DropdownStories from './index.stories';
+import * as DropdownStories from './Dropdown.stories';
 
 <Meta of={DropdownStories} />
 
