--- a/src/components/Modal/README.mdx
+++ b/src/components/Modal/README.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls, Unstyled, Story } from '@storybook/blocks';
-import * as ModalStories from './index.stories';
+import * as ModalStories from './Modal.stories';
 
 <Meta of={ModalStories} />
 
