--- a/src/components/Toast/README.mdx
+++ b/src/components/Toast/README.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls, Story } from '@storybook/blocks';
-import * as ToastStories from './index.stories';
+import * as ToastStories from './Toast.stories';
 
 <Meta of={ToastStories} />
 
